Switch to execute for gradle and add wrapper
Signed-off-by: Joshua Castle <26531652+Kas-tle@users.noreply.github.com>